tabindex alle sider

--- a/home.html
+++ b/home.html
@@ -58,8 +58,8 @@
         <main>
             <section>
                 <div class="home-text">
-                    <h1>Problem</h1>
-                    <p>
+                    <h1 tabindex="0">Problem</h1>
+                    <p tabindex="0">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Illum, dignissimos autem fuga praesentium doloremque non
                         quia facere, optio eligendi a soluta nemo quisquam at
@@ -69,11 +69,11 @@
                         facere, optio eligendi a soluta nemo quisquam at
                         laudantium nulla labore temporibus vel unde?
                     </p>
-                    <a href="problem.html">Read more</a>
+                    <a tabindex="0" href="problem.html">Read more</a>
                 </div>
                 <div class="home-text">
-                    <h1>Solution</h1>
-                    <p>
+                    <h1 tabindex="0">Solution</h1>
+                    <p tabindex="0">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Illum, dignissimos autem fuga praesentium doloremque non
                         quia facere, optio eligendi a soluta nemo quisquam at
@@ -83,11 +83,11 @@
                         facere, optio eligendi a soluta nemo quisquam at
                         laudantium nulla labore temporibus vel unde?
                     </p>
-                    <a href="solution.html">Read more</a>
+                    <a tabindex="0" href="solution.html">Read more</a>
                 </div>
                 <div class="home-text">
-                    <h1>Prototype</h1>
-                    <p>
+                    <h1 tabindex="0">Prototype</h1>
+                    <p tabindex="0">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Illum, dignissimos autem fuga praesentium doloremque non
                         quia facere, optio eligendi a soluta nemo quisquam at
@@ -97,7 +97,7 @@
                         facere, optio eligendi a soluta nemo quisquam at
                         laudantium nulla labore temporibus vel unde?
                     </p>
-                    <a href="prototype.html">Read more</a>
+                    <a tabindex="0" href="prototype.html">Read more</a>
                 </div>
             </section>
         </main>
