--- a/problem.html
+++ b/problem.html
@@ -58,7 +58,7 @@
         </header>
         <main>
             <div>
-                <img
+                <img tabindex="0"
                     class="big-picture"
                     src="imgs/problem/woman-green-sweater.jpg"
                     alt="Woman in grean sweater with a headace."
@@ -67,8 +67,8 @@
 
             <section>
                 <div class="problem-text">
-                    <h2>Could this be you?</h2>
-                    <p>
+                    <h2 tabindex="0" >Could this be you?</h2>
+                    <p tabindex="0">
                         Staring into the dark abyss of a empty fridge. Feeling
                         the smell of a rotten fruit. The uneasy feeling of
                         throwing out food that could have been eaten, just if
@@ -77,7 +77,7 @@
                 </div>
 
                 <div>
-                    <img
+                    <img tabindex="0"
                         class="problem-img"
                         src="imgs/problem/woman-opening-fridge.jpg"
                         alt="Woman in front of fridge."
@@ -85,8 +85,8 @@
                 </div>
 
                 <div class="problem-text">
-                    <h2>Overskrift her?</h2>
-                    <p>
+                    <h2 tabindex="0">Overskrift her?</h2>
+                    <p tabindex="0">
                         All these feelings and emotions all relate to the finds
                         of recent research that show that people between the
                         ages of 20-30,recent mothers, and people with a lot of
@@ -97,8 +97,8 @@
 
             <section>
                 <div class="problem-question">
-                    <h2>This is what the UN says:</h2>
-                    <p>
+                    <h2 tabindex="0">This is what the UN says:</h2>
+                    <p tabindex="0">
                         "Ensure sustainable consumption and production patterns"
                         includes amongst its objectives to "halve per capita
                         global food waste at the retail and consumer level, and
@@ -109,7 +109,7 @@
             </section>
             <section>
                 <div class="problem-question">
-                    <h2>
+                    <h2 tabindex="0">
                         What can you do to help us together to reach the UN
                         sustainability goal?
                     </h2>
@@ -118,13 +118,13 @@
 
             <section>
                 <div class="problem-person">
-                    <img
+                    <img tabindex="0"
                         class="problem-img"
                         src="imgs/problem/recent-parents.jpg"
                         alt="A couple kissing their baby."
                     />
-                    <h3>I am a recent parent</h3>
-                    <p>
+                    <h3 tabindex="0">I am a recent parent</h3>
+                    <p tabindex="0">
                         With a child, there is a lot of things to think about
                         and different variety of food that I have to make.
                         Because of this, I lose track of time and the things I
@@ -132,13 +132,13 @@
                     </p>
                 </div>
                 <div class="problem-person">
-                    <img
+                    <img tabindex="0"
                         class="problem-img"
                         src="imgs/problem/between-20-30.jpg"
                         alt="Group of young adults looking at screens."
                     />
-                    <h3>I am between 20 and 30</h3>
-                    <p>
+                    <h3 tabindex="0">I am between 20 and 30</h3>
+                    <p tabindex="0">
                         Being young, I often eat outside and forget that I have
                         food in my fridge. Additionally, I don’t think to much
                         about my spending, but it always hurts at the end of the
@@ -146,13 +146,13 @@
                     </p>
                 </div>
                 <div class="problem-person">
-                    <img
+                    <img tabindex="0"
                         class="problem-img"
                         src="imgs/problem/rich.jpg"
                         alt="Two people discussing in a nice office."
                     />
-                    <h3>I am wealthy</h3>
-                    <p>
+                    <h3 tabindex="0">I am wealthy</h3>
+                    <p tabindex="0">
                         Money is not my real motivation for taking more
                         responsibility towards my food consumption. Because of
                         this, I would rather think about how my habits can help
@@ -163,8 +163,8 @@
 
             <section>
                 <div class="problem-solution">
-                    <h2>Optimat can help with all of the above!</h2>
-                    <p>
+                    <h2 tabindex="0">Optimat can help with all of the above!</h2>
+                    <p tabindex="0">
                         By helping you manage your food usage and dates of
                         expiry, you can help support the UN goals by making
                         micro changes to your habits. Over time, this can have a
@@ -174,7 +174,7 @@
                 </div>
 
                 <div class="problem-graph">
-                    <img
+                    <img tabindex="0"
                         class="problem-solution-img"
                         src="imgs/problem/graph-trash.jpeg"
                         alt="graph"
