--- a/solution.html
+++ b/solution.html
@@ -58,7 +58,7 @@
         </header>
         <main>
             <div>
-                <img
+                <img tabindex="0"
                     class="big-picture"
                     src="https://via.placeholder.com/400"
                     alt="big image"
@@ -66,8 +66,8 @@
             </div>
             <section>
                 <div class="solution-text">
-                    <h2>Get the recipies for what you have</h2>
-                    <p>
+                    <h2 tabindex="0">Get the recipies for what you have</h2>
+                    <p tabindex="0">
                         Staring into the dark abyss of a empty fridge. Feeling
                         the smell of a rotten fruit. The uneasy feeling of
                         throwing out food that could have been eaten, just if
@@ -75,15 +75,15 @@
                     </p>
                 </div>
                 <div>
-                    <img
+                    <img tabindex="0"
                         class="solution-img"
                         src="https://via.placeholder.com/150x250"
                         alt="Kvinne foran kjøleskap"
                     />
                 </div>
                 <div class="solution-text">
-                    <h2>Throw less waste</h2>
-                    <p>
+                    <h2 tabindex="0">Throw less waste</h2>
+                    <p tabindex="0">
                         All these feelings and emotions all relate to the finds
                         of recent research that show that people between the
                         ages of 20-30,recent mothers, and people with a lot of
@@ -93,29 +93,29 @@
             </section>
             <section>
                 <div class="solution-text">
-                    <h2>Track expiry dates</h2>
-                    <p>
+                    <h2 tabindex="0">Track expiry dates</h2>
+                    <p tabindex="0">
                         It is tricky to remember the expiry date of that product
                         in the back of your fridge - now, optimat remembers what
                         you have and helps you.
                     </p>
                 </div>
                 <div>
-                    <img
+                    <img tabindex="0"
                         class="solution-img"
                         src="imgs/solution/barcode-cellphone.jpg"
                         alt="QR code"
                     />
                 </div>
                 <div class="solution-text">
-                    <h2>Start using what you have</h2>
-                    <p>Soft reminders to help you eat your leftovers.</p>
+                    <h2 tabindex="0">Start using what you have</h2>
+                    <p tabindex="0">Soft reminders to help you eat your leftovers.</p>
                 </div>
             </section>
             <section>
                 <div class="solution-text">
-                    <h2>Organize your fridge</h2>
-                    <p>
+                    <h2 tabindex="0">Organize your fridge</h2>
+                    <p tabindex="0">
                         Take a picture of your fridge to instantly get advice on
                         how you can organize it - using simple principles such
                         as First in First out, we make it easer to stay
@@ -123,8 +123,8 @@
                     </p>
                 </div>
                 <div class="solution-text">
-                    <h2>Get nutritional advice</h2>
-                    <p>
+                    <h2 tabindex="0">Get nutritional advice</h2>
+                    <p tabindex="0">
                         We integrate with apple HealtKit to combine your
                         consumption data with your health data - over time, you
                         can track how food impacts your health.
@@ -133,8 +133,8 @@
             </section>
             <section>
                 <div class="solution-text">
-                    <h2>Kitchen matching!</h2>
-                    <p>
+                    <h2 tabindex="0">Kitchen matching!</h2>
+                    <p tabindex="0">
                         You have some foods that miss some foods - we suggest
                         some of your friedns that you can meet to cook together
                         with, since we know their fridge, we know what they
@@ -142,8 +142,8 @@
                     </p>
                 </div>
                 <div class="solution-text">
-                    <h2>Social !</h2>
-                    <p>
+                    <h2 tabindex="0">Social !</h2>
+                    <p tabindex="0">
                         Compete with your friends, with our scoreboard.
                     </p>
                 </div>
