--- a/sources.html
+++ b/sources.html
@@ -59,45 +59,45 @@
         </header>
         <main>
             <div class="sources">
-                <h2>Home</h2>
+                <h2 tabindex="0">Home</h2>
                 <ul>
                     <li>
                         <a href=""></a>
                     </li>
                 </ul>
 
-                <h2>Problem</h2>
+                <h2 tabindex="0">Problem</h2>
                 <ul>
                     <li>
-                        <p>Woman in green sweater sitting in front of apple</p>
+                        <p tabindex="0">Woman in green sweater sitting in front of apple</p>
                         <a
                             href="https://www.pexels.com/photo/woman-in-green-sweater-sitting-in-front-of-apple-3214277/"
                             >https://www.pexels.com/photo/woman-in-green-sweater-sitting-in-front-of-apple-3214277/</a
                         >
                     </li>
                     <li>
-                        <p>Woman waring pink knit top opening refrigerator</p>
+                        <p tabindex="0">Woman waring pink knit top opening refrigerator</p>
                         <a
                             href="https://www.pexels.com/photo/woman-wearing-pink-knit-top-opening-refrigerator-1458687/"
                             >https://www.pexels.com/photo/woman-wearing-pink-knit-top-opening-refrigerator-1458687/</a
                         >
                     </li>
                     <li>
-                        <p>Affection baby baby girl beautiful</p>
+                        <p tabindex="0">Affection baby baby girl beautiful</p>
                         <a
                             href="https://www.pexels.com/photo/affection-baby-baby-girl-beautiful-377058/"
                             >https://www.pexels.com/photo/affection-baby-baby-girl-beautiful-377058/</a
                         >
                     </li>
                     <li>
-                        <p>Man and woman discussing and sharing ideas</p>
+                        <p tabindex="0">Man and woman discussing and sharing ideas</p>
                         <a
                             href="https://www.pexels.com/photo/man-and-woman-discussing-and-sharing-ideas-2977565/"
                             >https://www.pexels.com/photo/man-and-woman-discussing-and-sharing-ideas-2977565/</a
                         >
                     </li>
                     <li>
-                        <p>Group of people sitting inside room</p>
+                        <p tabindex="0">Group of people sitting inside room</p>
                         <a
                             href="https://www.pexels.com/photo/group-of-people-sitting-inside-room-2422294/"
                             >https://www.pexels.com/photo/group-of-people-sitting-inside-room-2422294/</a
@@ -105,7 +105,7 @@
                     </li>
 
                     <li>
-                        <p>SSB statisic graph (trash from households)</p>
+                        <p tabindex="0">SSB statisic graph (trash from households)</p>
                         <a
                             href="https://www.ssb.no/natur-og-miljo/statistikker/avfkomm/aar/2016-06-21"
                             >https://www.ssb.no/natur-og-miljo/statistikker/avfkomm/aar/2016-06-21</a
@@ -113,10 +113,10 @@
                     </li>
                 </ul>
 
-                <h2>Solution</h2>
+                <h2 tabindex="0">Solution</h2>
                 <ul>
                     <li>
-                        <p>Barcode cellphone close up</p>
+                        <p tabindex="0">Barcode cellphone close up</p>
                         <a
                             href="https://www.pexels.com/photo/barcode-cellphone-close-up-coded-278430/"
                             >https://www.pexels.com/photo/barcode-cellphone-close-up-coded-278430/</a
@@ -126,10 +126,10 @@
                         <a href=""></a>
                     </li>
                 </ul>
-                <h2>Prototype</h2>
+                <h2 tabindex="0">Prototype</h2>
                 <ul>
                     <li>
-                        <p>Pumpkin waffle recipe</p>
+                        <p tabindex="0">Pumpkin waffle recipe</p>
                         <a href="https://www.savorynothings.com/simple-pumpkin-waffles/">https://www.savorynothings.com/simple-pumpkin-waffles/</a>
                   </li>
                   <li>
