--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <title>Web final project</title>
         <link rel="stylesheet" href="stylesheet/style.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
         <header>
