--- a/prototype.html
+++ b/prototype.html
@@ -1,124 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>Web final project</title>
+        <link rel="stylesheet" type="text/css" href="stylesheet/style.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Web final project</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-</head>
-
-<body>
-    <header>
-        <div>
-            <a href="home.html">
-                <img class="logo" src="imgs/optimat-logo.png" alt="Optimat logo" />
-            </a>
-        </div>
-        <nav class="nav-desktop">
-            <ul>
-                <li>
-                    <a href="home.html">Home</a>
-                </li>
-                <li>
-                    <a href="problem.html">Problem</a>
-                </li>
-                <li>
-                    <a href="solution.html">Solution</a>
-                </li>
-                <li>
-                    <a class="active" href="prototype.html">Prototype</a>
-                </li>
-                <li>
-                    <a href="sources.html">Sources</a>
-                </li>
-            </ul>
-        </nav>
-        <nav class="nav-mobile">
-            <ul>
-                <li>
-                    <a  href="home.html">Home</a>
-                </li>
-                <li>
-                    <a href="problem.html">Problem</a>
-                </li>
-                <li>
-                    <a href="solution.html">Solution</a>
-                </li>
-                <li>
-                    <a class="active" href="prototype.html">Prototype</a>
-                </li>
-                <li>
-                    <a href="sources.html">Sources</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <div class="contentPrototype">
-                <div class="prototypeHeader">
+    <body>
+        <header>
+            <div>
+                <a href="home.html">
+                    <img
+                        class="logo"
+                        src="imgs/optimat-logo.png"
+                        alt="Optimat logo"
+                    />
+                </a>
+            </div>
+            <nav class="nav-desktop">
+                <ul>
+                    <li>
+                        <a href="home.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="problem.html">Problem</a>
+                    </li>
+                    <li>
+                        <a href="solution.html">Solution</a>
+                    </li>
+                    <li>
+                        <a class="active" href="prototype.html">Prototype</a>
+                    </li>
+                    <li>
+                        <a href="sources.html">Sources</a>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="nav-mobile">
+                <ul>
+                    <li>
+                        <a href="home.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="problem.html">Problem</a>
+                    </li>
+                    <li>
+                        <a href="solution.html">Solution</a>
+                    </li>
+                    <li>
+                        <a class="active" href="prototype.html">Prototype</a>
+                    </li>
+                    <li>
+                        <a href="sources.html">Sources</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <div class="prototype-header">
                     <h1 tabindex="0">Prototype</h1>
-                    <p tabindex="0">On this page we will show exactly how our app looks and works!</p>
-                    <p tabindex="0">The entire focus on the design is to make it simple, clear and easy to use.
-                        Our goal is that everyone can use our app with no issues. </p>
-                    <p tabindex="0">Scroll down to see all the cool stuff you can do with our app!</p>
-                </div>
-         </section>
-         <div class="prototypeContent">
-            <section style="flex-direction: column;">
-                <div class="prototype1">
-                    <img src="imgs/prototype/Recipies.png" tabindex="0">
-                    <h1 tabindex="0">Start, login and register</h1>
-                    <p tabindex="0">The very first page you see when you open our app is the start page. On this page you will be
-                        presented with our logo and a short description of our app.</p>
-                    <p tabindex="0">When you click "Let's go" you be loaded into our login screen, where you can login if you have an
-                        account or register if it's your first time using the app. To make the registration as simple and
-                        quick as possible you have the option to register with an existing facebook or google account.</p>
-                </div>
-             </section> 
-             <section style="flex-direction: column;">
-                <div class="prototype1">
-                    <img src="imgs/prototype/Addnew.png" tabindex="0">
-                    <h1 tabindex="0">Add new product</h1>
-                    <p tabindex="0">On this page you can add a new product to your inventory. It is very simple. All you have to do
-                        is scan the barcode of the product with the camera on your phone. Automatically after this all
-                        the information will be recieved automatically. Such as name of the item, nutrional content like
-                        calories etc and the expiration date. </p>
-                </div>
-			 </section>
-             <section style="flex-direction: column;">
-                <div class="prototype1">
-                    <img src="imgs/prototype/Inventory.png" tabindex="0">
-                    <h1 tabindex="0">Inventory</h1>
-                    <p tabindex="0">Here you will see all the items you have scanned into the app. The inventory is split into cold
-                        items and dry items. You can see the product name, description and how many days left til
-                        expiration. </p>
-                </div>
-			 </section>
-             <section style="flex-direction: column;">
-                <div class="prototype1">
-                    <img src="imgs/prototype/Recipies.png" tabindex="0">
-                    <h1 tabindex="0">Recipes</h1>
-                    <p tabindex="0">Not sure what to have for dinner? Then the recipies are perfect for you. We show you exactly what
-                        dishes you can make with the items you have. We even tell you if your expired items are safe to
-                        use with the dish. We have recepies for everything, breakfast, lunch, dinner, snacks, smoothies and
-                        more!
+                    <p tabindex="0">
+                        On this page we will show exactly how our app looks and
+                        works!
+                    </p>
+                    <p tabindex="0">
+                        The entire focus on the design is to make it simple,
+                        clear and easy to use. Our goal is that everyone can use
+                        our app with no issues.
+                    </p>
+                    <p tabindex="0">
+                        Scroll down to see all the cool stuff you can do with
+                        our app!
                     </p>
                 </div>
-			 </section>
-			 <section style="flex-direction: column;">
-                <div class="prototype1">
-                    <img src="imgs/prototype/Schedule.png" tabindex="0">
-                    <h1 tabindex="0">Schedule</h1>
-                    <p tabindex="0">On the "Schedule" page you can plan what dishses to have what days, the app makes sure you have
-                        enough of everything, and if you don't it will say what you need and how much.</p>
+            </section>
+        
+            <section>
+                <div class="prototype-img">
+                    <img
+                        tabindex="0" class="prototype-img"
+                        src="imgs/prototype/Login.png"
+                        tabindex="0"
+                    />
                 </div>
-			 </section>
-            </div>
-        </div>
-    </main>
-</body>
-
+                <div class="prototype-text">
+                    <h2 tabindex="0">Start, login and register</h2>
+                    <p tabindex="0">
+                        The very first page you see when you open our app is the
+                        start page. On this page you will be presented with our
+                        logo and a short description of our app.
+                    </p>
+                    <p tabindex="0">
+                        When you click "Let's go" you be loaded into our login
+                        screen, where you can login if you have an account or
+                        register if it's your first time using the app. To make
+                        the registration as simple and quick as possible you
+                        have the option to register with an existing facebook or
+                        google account.
+                    </p>
+                </div>
+            </section>
+            <section>
+                <div class="prototype-img">
+                    <img
+                        tabindex="0"
+                        class="prototype-img"
+                        src="imgs/prototype/Addnew.png"
+                        tabindex="0"
+                    />
+                </div>
+                <div class="prototype-text">
+                    <h2 tabindex="0">Add a new product</h2>
+                    <p tabindex="0">
+                        On this page you can add a new product to your
+                        inventory.
+                    </p>
+                </div>
+            </section>
+            <section>
+                <div class="prototype-img">
+                    <img
+                        tabindex="0"
+                        class="prototype-img"
+                        src="imgs/prototype/Inventory.png"
+                        tabindex="0"
+                    />
+                </div>
+                <div class="prototype-text">
+                    <h2 tabindex="0">Inventory</h2>
+                    <p tabindex="0">
+                        Here you will see all the items you have scanned into
+                        the app. The inventory is split into cold items and dry
+                        items. You can see the product name, description and how
+                        many days left til expiration.
+                    </p>
+                </div>
+            </section>
+            <section>
+                <div class="prototype-img">
+                    <img
+                        tabindex="0"
+                        class="prototype-img"
+                        src="imgs/prototype/Recipies.png"
+                        tabindex="0"
+                    />
+                </div>
+                <div class="prototype-text">
+                    <h2 tabindex="0">Recipies</h2>
+                    <p tabindex="0">
+                        Not sure what to have for dinner? Then the recipies are
+                        perfect for you. We show you exactly what dishes you can
+                        make with the items you have. We even tell you if your
+                        expired items are safe to use with the dish. We have
+                        recepies for everything, breakfast, lunch, dinner,
+                        snacks, smoothies and more!
+                    </p>
+                </div>
+            </section>
+            <section>
+                <div class="prototype-img">
+                    <img
+                        tabindex="0"
+                        class="prototype-img"
+                        src="imgs/prototype/Schedule.png"
+                        tabindex="0"
+                    />
+                </div>
+                <div class="prototype-text">
+                    <h2 tabindex="0">Schedule</h2>
+                    <p tabindex="0">
+                        On the "Schedule" page you can plan what dishses to have
+                        what days, the app makes sure you have enough of
+                        everything, and if you don't it will say what you need
+                        and how much.
+                    </p>
+                </div>
+            </section>
+        </main>
+    </body>
 </html>
