--- a/sources.html
+++ b/sources.html
@@ -137,7 +137,10 @@
                     </li>
                     <li>
                         <a target="_blank" href="https://icons8.com/">Calendar icon</a> icon by <a target="_blank" href="https://icons8.com/%22%3EIcons8">Icon8</a>
-
+                    </li>
+                    <li>
+                        <p>Barcode-barcode-scanner</p>
+                        <a href="https://miro.medium.com/max/350/1*bHzXDhGyvWNKi9xZNfliFg.png">https://miro.medium.com/max/350/1*bHzXDhGyvWNKi9xZNfliFg.png</a>
                     </li>
                 </ul>
             </div>
