endret til bilde + fikset css solution

--- a/solution.html
+++ b/solution.html
@@ -57,93 +57,92 @@
             </nav>
         </header>
         <main>
-            <div>
-                <img tabindex="0"
-                    class="solution-head-img"
-                    src="imgs/solution/solution.jpg"
-                    alt="Solution image"
-                />
+            <div class="solution-header">
+                <h2 tabindex="0">Solution!</h2>
             </div>
-            <div style="padding-left: 5%; padding-right: 5%;">
-                <section>
-                    <div class="solution-text">
-                        <h2 tabindex="0">Get the recipies for what you have</h2>
-                        <p tabindex="0">
-                            Staring into the dark abyss of a empty fridge. Feeling
-                            the smell of a rotten fruit. The uneasy feeling of
-                            throwing out food that could have been eaten, just if
-                            you had taken the time to plan. Or use it in a recepie.
-                        </p>
-                    </div>
-                    <div class="solution-text">
-                        <h2 tabindex="0">Throw less waste</h2>
-                        <p tabindex="0">
-                            All these feelings and emotions all relate to the finds
-                            of recent research that show that people between the
-                            ages of 20-30,recent mothers, and people with a lot of
-                            money, throw a lot of perfectly good food.
-                        </p>
-                    </div>
-                </section>
-                <section>
-                    <div class="solution-text">
-                        <h2 tabindex="0">Track expiry dates</h2>
-                        <p tabindex="0">
-                            It is tricky to remember the expiry date of that product
-                            in the back of your fridge - now, optimat remembers what
-                            you have and helps you.
-                        </p>
-                    </div>
-                    <div class="solution-text">
-                        <h2 tabindex="0">Start using what you have</h2>
-                        <p tabindex="0">Soft reminders to help you eat your leftovers.</p>
-                    </div>
-                </section>
-                <section>
-                    <div>
-                        <img tabindex="0"
-                            class="solution-img"
-                            src="imgs/solution/barcode-cellphone.jpg"
-                            alt="QR code"/>
-                    </div>
-                </section>
-                <section>
-                    <div class="solution-text">
-                        <h2 tabindex="0">Organize your fridge</h2>
-                        <p tabindex="0">
-                            Take a picture of your fridge to instantly get advice on
-                            how you can organize it - using simple principles such
-                            as First in First out, we make it easer to stay
-                            organized.
-                        </p>
-                    </div>
-                    <div class="solution-text">
-                        <h2 tabindex="0">Get nutritional advice</h2>
-                        <p tabindex="0">
-                            We integrate with apple HealtKit to combine your
-                            consumption data with your health data - over time, you
-                            can track how food impacts your health.
-                        </p>
-                    </div>
-                </section>
-                <section>
-                    <div class="solution-text">
-                        <h2 tabindex="0">Kitchen matching!</h2>
-                        <p tabindex="0">
-                            You have some foods that miss some foods - we suggest
-                            some of your friedns that you can meet to cook together
-                            with, since we know their fridge, we know what they
-                            have.
-                        </p>
-                    </div>
-                    <div class="solution-text">
-                        <h2 tabindex="0">Social !</h2>
-                        <p tabindex="0">
-                            Compete with your friends, with our scoreboard.
-                        </p>
-                    </div>
-                </section>
-            </div>
+
+            <section class="solution-padding">
+                <div class="solution-text">
+                    <h2 tabindex="0">Get the recipies for what you have</h2>
+                    <p tabindex="0">
+                        Staring into the dark abyss of a empty fridge. Feeling
+                        the smell of a rotten fruit. The uneasy feeling of
+                        throwing out food that could have been eaten, just if
+                        you had taken the time to plan. Or use it in a recepie.
+                    </p>
+                </div>
+                <div class="solution-text">
+                    <h2 tabindex="0">Throw less waste</h2>
+                    <p tabindex="0">
+                        All these feelings and emotions all relate to the finds
+                        of recent research that show that people between the
+                        ages of 20-30,recent mothers, and people with a lot of
+                        money, throw a lot of perfectly good food.
+                    </p>
+                </div>
+            </section>
+            <section class="solution-padding">
+                <div class="solution-text">
+                    <h2 tabindex="0">Track expiry dates</h2>
+                    <p tabindex="0">
+                        It is tricky to remember the expiry date of that product
+                        in the back of your fridge - now, optimat remembers what
+                        you have and helps you.
+                    </p>
+                </div>
+                <div class="solution-text">
+                    <h2 tabindex="0">Start using what you have</h2>
+                    <p tabindex="0">
+                        Soft reminders to help you eat your leftovers.
+                    </p>
+                </div>
+            </section>
+            <section>
+                <div>
+                    <img
+                        tabindex="0"
+                        class="solution-img"
+                        src="imgs/solution/barcode-cellphone.jpg"
+                        alt="QR code"
+                    />
+                </div>
+            </section>
+            <section class="solution-padding">
+                <div class="solution-text">
+                    <h2 tabindex="0">Organize your fridge</h2>
+                    <p tabindex="0">
+                        Take a picture of your fridge to instantly get advice on
+                        how you can organize it - using simple principles such
+                        as First in First out, we make it easer to stay
+                        organized.
+                    </p>
+                </div>
+                <div class="solution-text">
+                    <h2 tabindex="0">Get nutritional advice</h2>
+                    <p tabindex="0">
+                        We integrate with apple HealtKit to combine your
+                        consumption data with your health data - over time, you
+                        can track how food impacts your health.
+                    </p>
+                </div>
+            </section>
+            <section class="solution-padding">
+                <div class="solution-text">
+                    <h2 tabindex="0">Kitchen matching!</h2>
+                    <p tabindex="0">
+                        You have some foods that miss some foods - we suggest
+                        some of your friedns that you can meet to cook together
+                        with, since we know their fridge, we know what they
+                        have.
+                    </p>
+                </div>
+                <div class="solution-text">
+                    <h2 tabindex="0">Social !</h2>
+                    <p tabindex="0">
+                        Compete with your friends, with our scoreboard.
+                    </p>
+                </div>
+            </section>
         </main>
     </body>
 </html>
