--- a/solution.html
+++ b/solution.html
@@ -57,9 +57,11 @@
             </nav>
         </header>
         <main>
-            <div class="solution-header">
-                <h2 tabindex="0">Solution!</h2>
-            </div>
+            <section class="solution-padding">
+                <div class="solution-header">
+                    <h2 tabindex="0">Solution!</h2>
+                </div>
+            </section>
 
             <section class="solution-padding">
                 <div class="solution-text">
