--- a/solution.html
+++ b/solution.html
@@ -99,7 +99,7 @@
                     </p>
                 </div>
             </section>
-            <section>
+            <section class="solution-padding">
                 <div>
                     <img
                         tabindex="0"
