--- a/solution.html
+++ b/solution.html
@@ -59,7 +59,7 @@
         <main>
             <section class="solution-padding">
                 <div class="solution-header">
-                    <h2 tabindex="0">Solution!</h2>
+                    <h1 tabindex="0">Solution</h1>
                 </div>
             </section>
 
