--- a/problem.html
+++ b/problem.html
@@ -57,27 +57,30 @@
             </nav>
         </header>
         <main>
-            <div>
-                <img tabindex="0"
-                    class="big-picture"
-                    src="imgs/problem/woman-green-sweater.jpg"
-                    alt="Woman in grean sweater with a headace."
-                />
+            <div class="problem-header">
+                <h2 tabindex="0">Problem</h2>
             </div>
 
             <section>
                 <div class="problem-text">
-                    <h2 tabindex="0" >Could this be you?</h2>
+                    <h2 tabindex="0">To whom it may concern</h2>
                     <p tabindex="0">
                         Staring into the dark abyss of a empty fridge. Feeling
                         the smell of a rotten fruit. The uneasy feeling of
                         throwing out food that could have been eaten, just if
-                        you had taken the time to plan. Or use it in a recepie
+                        you had taken the time to plan. Or use it in a recipe.
+                    </p>
+                        <p tabindex="0">
+                        All these feelings and emotions all relate to the
+                        findings of recent research that show that people
+                        between the ages of 20 and 30, recent mothers and people
+                        with a lot of money, throw a lot of perfectly good food.
                     </p>
                 </div>
 
                 <div>
-                    <img tabindex="0"
+                    <img
+                        tabindex="0"
                         class="problem-img"
                         src="imgs/problem/woman-opening-fridge.jpg"
                         alt="Woman in front of fridge."
@@ -85,12 +88,25 @@
                 </div>
 
                 <div class="problem-text">
-                    <h2 tabindex="0">Overskrift her?</h2>
+                    <h2 tabindex="0">The problem</h2>
                     <p tabindex="0">
-                        All these feelings and emotions all relate to the finds
-                        of recent research that show that people between the
-                        ages of 20-30,recent mothers, and people with a lot of
-                        money, throw a lot of perfectly good food.
+                        Producing food costs resources. These resources include
+                        land, water, energy, soil, seeds and other inputs. When
+                        we produce food that never gets eaten, these resources
+                        are wasted. The waste of these recourses increases the
+                        greenhouse gas in vain. The reduction in food waste
+                        would also help us achieve the UN sustainability goal of
+                        zero hunger.
+                    </p>
+                    <p tabindex="0">
+                        The problem of food loss lies in all stages of “the life
+                        cycle of food”. These include production, processing,
+                        retailing and consumption. In low-income countries, most
+                        of the food is wasted during the production stage. In
+                        higher income countries a lot of the food is wasted at
+                        the consumption stage. The possible reason for this is
+                        that higher income countries take food for granted, and
+                        they have generally lower respect for food.
                     </p>
                 </div>
             </section>
@@ -113,57 +129,69 @@
                         What can you do to help us together to reach the UN
                         sustainability goal?
                     </h2>
+                    <p>
+                        We believe that awareness and a greater understanding of
+                        the effects of food waste, will increase the respect we
+                        have for food. Optimat does this by making it easier for
+                        you to keep track of your food. You can read more about
+                        this in our <a href="solution.html">solution</a> tab.
+                    </p>
                 </div>
             </section>
 
             <section>
                 <div class="problem-person">
-                    <img tabindex="0"
+                    <img
+                        tabindex="0"
                         class="problem-img"
                         src="imgs/problem/recent-parents.jpg"
                         alt="A couple kissing their baby."
                     />
                     <h3 tabindex="0">I am a recent parent</h3>
                     <p tabindex="0">
-                        With a child, there is a lot of things to think about
+                        "With a child, there is a lot of things to think about
                         and different variety of food that I have to make.
                         Because of this, I lose track of time and the things I
-                        havei n my fridge
+                        have in my fridge."
                     </p>
                 </div>
                 <div class="problem-person">
-                    <img tabindex="0"
+                    <img
+                        tabindex="0"
                         class="problem-img"
                         src="imgs/problem/between-20-30.jpg"
                         alt="Group of young adults looking at screens."
                     />
                     <h3 tabindex="0">I am between 20 and 30</h3>
                     <p tabindex="0">
-                        Being young, I often eat outside and forget that I have
-                        food in my fridge. Additionally, I don’t think to much
+                        "Being young, I often eat outside and forget that I have
+                        food in my fridge. Additionally, I don’t think too much
                         about my spending, but it always hurts at the end of the
-                        month
+                        month."
                     </p>
                 </div>
                 <div class="problem-person">
-                    <img tabindex="0"
+                    <img
+                        tabindex="0"
                         class="problem-img"
                         src="imgs/problem/rich.jpg"
                         alt="Two people discussing in a nice office."
                     />
                     <h3 tabindex="0">I am wealthy</h3>
                     <p tabindex="0">
-                        Money is not my real motivation for taking more
+                        "Money is not my real motivation for taking more
                         responsibility towards my food consumption. Because of
                         this, I would rather think about how my habits can help
-                        the environent.
+                        the environment."
                     </p>
                 </div>
             </section>
 
             <section>
                 <div class="problem-solution">
-                    <h2 tabindex="0">Optimat can help with all of the above!</h2>
+                    <h2 tabindex="0">
+                        Optimat can help with all of the above!
+                    </h2>
                     <p tabindex="0">
                         By helping you manage your food usage and dates of
                         expiry, you can help support the UN goals by making
@@ -174,7 +202,8 @@
                 </div>
 
                 <div class="problem-graph">
-                    <img tabindex="0"
+                    <img
+                        tabindex="0"
                         class="problem-solution-img"
                         src="imgs/problem/graph-trash.jpeg"
                         alt="graph"
