--- a/sources.html
+++ b/sources.html
@@ -69,12 +69,9 @@
                 <h2 tabindex="0">Problem</h2>
                 <ul>
                     <li>
-                        <p tabindex="0">Woman in green sweater sitting in front of apple</p>
-                        <a
-                            href="https://www.pexels.com/photo/woman-in-green-sweater-sitting-in-front-of-apple-3214277/"
-                            >https://www.pexels.com/photo/woman-in-green-sweater-sitting-in-front-of-apple-3214277/</a
-                        >
+                        <p tabindex="0">Food and Agriculture Organization of the United Nations. (år). Food Loss and Food Waste. Retrieved 01.12.2019 from <a href="http://www.fao.org/food-loss-and-food-waste/en/">http://www.fao.org/food-loss-and-food-waste/en/</a></p>
                     </li>
+                    <li>Food waste. (n.d.) Wikipedia. Retrieved 01.12.2019 from <a href="https://en.wikipedia.org/wiki/Food_waste">https://en.wikipedia.org/wiki/Food_waste</a></li>
                     <li>
                         <p tabindex="0">Woman waring pink knit top opening refrigerator</p>
                         <a
