solution header img

--- a/solution.html
+++ b/solution.html
@@ -57,9 +57,9 @@
             </nav>
         </header>
         <main>
-            <section class="solution-padding">
-                <div class="solution-header">
-                    <h1 tabindex="0">Solution</h1>
+            <section>
+                <div>
+                    <img class="solution-header" src="./imgs/general-header-gradient-2.png" alt="">
                 </div>
             </section>
 
