--- a/prototype.html
+++ b/prototype.html
@@ -80,7 +80,7 @@
             <section>
                 <div class="prototype-img">
                     <img
-                        tabindex="0" class="prototype-img"
+                        class="prototype-img"
                         src="imgs/prototype/Login.png"
                         tabindex="0"
                         alt="Optimat logg inn screen"
@@ -116,8 +116,10 @@
                 <div class="prototype-text">
                     <h2 tabindex="0">Add a new product</h2>
                     <p tabindex="0">
-                        On this page you can add a new product to your
-                        inventory.
+                        On this page you can add a new product to your inventory. It is very simple. All you have to do
+                        is scan the barcode of the product with the camera on your phone. Automatically after this all
+                        the information will be recieved automatically. Such as name of the item, nutrional content like
+                        calories etc and the expiration date. 
                     </p>
                 </div>
             </section>
